Jump fix

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ body {
     margin-left: 0px;
 }
 
+a.linked {
+    padding-top: 10vh;
+}
 
 /*Medium Blog code */
 
@@ -828,6 +831,7 @@ section#seven a {
     color: #3cb054;
     text-decoration: none;
 }
+
 section#seven .col-md-3 {
     margin: .1vw;
 }
@@ -1046,7 +1050,7 @@ button.shadow-outline {
     left: -29px;
     width: 20px;
     height: 20px;
-    background: #caffce;
+    background: #fff;
     top: 15px;
     border-radius: 100px;
     border: 4px solid #3cb054;
@@ -1153,6 +1157,10 @@ button.shadow-outline {
         padding-right: 1vw;
         padding-left: 1vw;
         padding-bottom: 2vw;
+    }
+
+    a.linked {
+    padding-top: 2vh;
     }
 
     section#language {
